force-app/main/default/objects/Lilly_Session_Note__c/Lilly_Session_Note__c.object-meta.xml
<CustomObject>
    <label>Session Note</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Session Note Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Session Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>