force-app/main/default/objects/Lilly_Session_Note__c/fields/Lilly_Session__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Session</label>
    <referenceTo>Lilly_Session__c</referenceTo>
    <relationshipLabel>Session Notes</relationshipLabel>
    <relationshipName>Session_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>