force-app/main/default/objects/Lilly_Session_Note__c/fields/Lilly_Session_Notes__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Session_Notes__c</fullName>
    <label>Session Notes</label>
    <type>TextArea</type>
</CustomField>